--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <section>
-            <nav>
+            <nav class="topnav">
                 <ul>
                     <li><a href="#"> Home </a></li>
                     <li><a href="#">About</a></li>
