--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
             </nav>
         </section>
         <h1>This is my landing page</h1>
+        <img
+            src="https://imgs.search.brave.com/CKBtpIHMmfQs-2DpShChePoIpFZyxdxHJW63Nmg9Zf0/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJjYXZlLmNv/bS93cC93cDEzMzAz/OTE5LnBuZw"
+            width="100%"
+        />
     </body>
 </html>
