--- a/index.html
+++ b/index.html
@@ -1,25 +1,2 @@
 <!doctype html>
-<html>
-    <head>
-        <title>Landing page</title>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./style.css" />
-    </head>
-    <body>
-        <section>
-            <nav class="topnav">
-                <ul>
-                    <li><a href="#"> Home </a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#"> Contribution </a></li>
-                    <li><a href="#"> Project </a></li>
-                </ul>
-            </nav>
-        </section>
-        <h1>This is my landing page</h1>
-        <img
-            src="https://imgs.search.brave.com/CKBtpIHMmfQs-2DpShChePoIpFZyxdxHJW63Nmg9Zf0/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJjYXZlLmNv/bS93cC93cDEzMzAz/OTE5LnBuZw"
-            width="100%"
-        />
-    </body>
-</html>
+<html></html>
