added a image url

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!doctype html>
-<html></html>
+<html>
+    <head>
+        <title>personal portfolio</title>
+    </head>
+    <body>
+        <h1>Portfolio</h1>
+        <img
+            src="https://imgs.search.brave.com/0O0x0NVfWtXYrDk9kF1BdI8G_DdeqNNuG_9Aq-grYcI/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMudmVjdGVlenku/Y29tL3N5c3RlbS9y/ZXNvdXJjZXMvdGh1/bWJuYWlscy8wMDYv/MjIyLzEwMi9zbWFs/bC9hYnN0cmFjdC1t/b2Rlcm4tdGVjaC1v/Zi1wcm9ncmFtbWlu/Zy1jb2RlLXNjcmVl/bi1kZXZlbG9wZXIt/ZnJlZS1waG90by5q/cGc"
+            width="100%"
+        />
+    </body>
+</html>
